--- a/Build_makemore_YEPPY.ipynb
+++ b/Build_makemore_YEPPY.ipynb
@@ -2030,6 +2030,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 0,  5, 13,  ..., 25, 26, 24])"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xs"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 87,
    "metadata": {},
    "outputs": [],
